<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_launcher" >
        </ImageView>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/btn_one" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/btn_two" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/btn_three" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/btn_four" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/btn_five" />
    </LinearLayout>

</ScrollView>